tests/macros/expand/validate.stderr
error: option `validate` does not exist for kind `expand`
 --> $DIR/validate.rs:2:44
  |
2 |     let q = requestty::questions![Expand { validate: todo!() }];
  |                                            ^^^^^^^^
