tests/macros/expand/validate.rs
fn main() {
    let q = requestty::questions![Expand { validate: todo!() }];
}
